fix song book bottom padding, make black key spacing more realistic

--- a/index.css
+++ b/index.css
@@ -354,7 +354,7 @@ input[type="range"] {
   max-width: 1000px;
   margin: 40px auto;
   padding: 0 20px;
-  padding-bottom: 1600px;
+  padding-bottom: 160px;
   position: relative;
 }
 
